Various minor code quality improvements