@@ -13,6 +13,8 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 
+import org.jetbrains.annotations.Nullable;
+
 import vazkii.botania.api.recipe.BotanicalBreweryRecipe;
 import vazkii.botania.client.patchouli.PatchouliUtils;
 import vazkii.botania.common.crafting.BotaniaRecipeTypes;
@@ -22,9 +24,9 @@ import vazkii.patchouli.api.IVariable;
 import vazkii.patchouli.api.IVariableProvider;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public class BrewRecipeProcessor implements IComponentProcessor {
+	@Nullable
 	private BotanicalBreweryRecipe recipe;
 
 	@Override
@@ -33,32 +35,40 @@ public class BrewRecipeProcessor implements IComponentProcessor {
 		this.recipe = PatchouliUtils.getRecipe(level, BotaniaRecipeTypes.BREW_TYPE, id);
 	}
 
+	@Nullable
 	@Override
 	public IVariable process(Level level, String key) {
 		if (recipe == null) {
 			if (key.equals("is_offset")) {
-				return IVariable.wrap(false);
+				return IVariable.wrap(false, level.registryAccess());
 			}
 			return null;
-		} else if (key.equals("heading")) {
-			return IVariable.from(Component.translatable("botaniamisc.brewOf", Component.translatable(recipe.getBrew().getTranslationKey())), level.registryAccess());
-		} else if (key.equals("vial")) {
+		}
+		if (key.equals("heading")) {
+			return IVariable.from(Component.translatable("botaniamisc.brewOf",
+					Component.translatable(recipe.getBrew().getTranslationKey())), level.registryAccess());
+		}
+		if (key.equals("vial")) {
 			return IVariable.from(recipe.getOutput(new ItemStack(BotaniaItems.vial)), level.registryAccess());
-		} else if (key.equals("flask")) {
+		}
+		if (key.equals("flask")) {
 			return IVariable.from(recipe.getOutput(new ItemStack(BotaniaItems.flask)), level.registryAccess());
-		} else if (key.startsWith("input")) {
+		}
+		if (key.startsWith("input")) {
 			int requestedIndex = Integer.parseInt(key.substring(5)) - 1;
 			int indexOffset = (6 - recipe.getIngredients().size()) / 2; //Center the brew ingredients
 			int index = requestedIndex - indexOffset;
 
-			if (index < recipe.getIngredients().size() && index >= 0) {
-				return IVariable.wrapList(Arrays.stream(recipe.getIngredients().get(index).getItems()).map(o -> IVariable.from(o, level.registryAccess())).collect(Collectors.toList()), level.registryAccess());
-			} else {
-				return null;
-			}
+			return index < recipe.getIngredients().size() && index >= 0
+					? IVariable.wrapList(
+							Arrays.stream(recipe.getIngredients().get(index).getItems())
+									.map(o -> IVariable.from(o, level.registryAccess()))
+									.toList(),
+							level.registryAccess())
+					: null;
 		}
 		if (key.equals("is_offset")) {
-			return IVariable.wrap(recipe.getIngredients().size() % 2 == 0);
+			return IVariable.wrap(recipe.getIngredients().size() % 2 == 0, level.registryAccess());
 		}
 		return null;
 	}
