@@ -13,8 +13,9 @@ import com.google.common.collect.ImmutableList;
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
+
+import org.jetbrains.annotations.Nullable;
 
 import vazkii.botania.api.BotaniaAPI;
 import vazkii.botania.api.recipe.ManaInfusionRecipe;
@@ -25,10 +26,9 @@ import vazkii.patchouli.api.IVariable;
 import vazkii.patchouli.api.IVariableProvider;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class ManaInfusionProcessor implements IComponentProcessor {
+	@SuppressWarnings("NotNullFieldNotInitialized")
 	private List<ManaInfusionRecipe> recipes;
 	private boolean hasCustomHeading;
 
@@ -55,6 +55,7 @@ public class ManaInfusionProcessor implements IComponentProcessor {
 		this.hasCustomHeading = variables.has("heading");
 	}
 
+	@Nullable
 	@Override
 	public IVariable process(Level level, String key) {
 		if (recipes.isEmpty()) {
@@ -63,25 +64,27 @@ public class ManaInfusionProcessor implements IComponentProcessor {
 		switch (key) {
 			case "heading":
 				if (!hasCustomHeading) {
-					return IVariable.from(recipes.get(0).getResultItem(level.registryAccess()).getHoverName(), level.registryAccess());
+					return IVariable.from(recipes.getFirst().getResultItem(level.registryAccess()).getHoverName(), level.registryAccess());
 				}
 				return null;
 			case "input":
-				return PatchouliUtils.interweaveIngredients(recipes.stream().map(r -> r.getIngredients().get(0)).collect(Collectors.toList()), level);
+				return PatchouliUtils.interweaveIngredients(recipes.stream()
+						.map(recipe -> recipe.getIngredients().getFirst())
+						.toList(), level);
 			case "output":
-				return IVariable.wrapList(recipes.stream().map(r -> r.getResultItem(level.registryAccess())).map(o -> IVariable.from(o, level.registryAccess())).collect(Collectors.toList()), level.registryAccess());
+				return IVariable.wrapList(recipes.stream()
+						.map(recipe -> recipe.getResultItem(level.registryAccess()))
+						.map(stack -> IVariable.from(stack, level.registryAccess()))
+						.toList(), level.registryAccess());
 			case "catalyst":
 				return IVariable.wrapList(recipes.stream().map(ManaInfusionRecipe::getRecipeCatalyst)
-						.flatMap(ingr -> {
-							if (ingr == null) {
-								return Stream.of(ItemStack.EMPTY);
-							}
-							return ingr.getDisplayedStacks().stream();
-						})
-						.map(o -> IVariable.from(o, level.registryAccess()))
-						.collect(Collectors.toList()), level.registryAccess());
+						.flatMap(ingr -> ingr.getDisplayedStacks().stream())
+						.map(stack -> IVariable.from(stack, level.registryAccess()))
+						.toList(), level.registryAccess());
 			case "mana":
-				return IVariable.wrapList(recipes.stream().mapToInt(ManaInfusionRecipe::getManaToConsume).mapToObj(IVariable::wrap).collect(Collectors.toList()), level.registryAccess());
+				return IVariable.wrapList(recipes.stream().mapToInt(ManaInfusionRecipe::getManaToConsume)
+						.mapToObj(mana -> IVariable.wrap(mana, level.registryAccess()))
+						.toList(), level.registryAccess());
 			case "drop":
 				Component q = Component.literal("(?)").withStyle(ChatFormatting.BOLD);
 				return IVariable.from(Component.translatable("botaniamisc.drop").append(" ").append(q), level.registryAccess());
